[package]
name = "csvbuttler"
version = "0.1.0"
authors = ["Sebastian Kriems <sebastian.kriems@obi.de>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
actix-cors = "0.1.0"
csv = "1.1"
dotenv = "0.14.1"
env_logger = "0.3.0"
futures = "0.1.28"
listenfd = "0.3"
serde = { version = "1.0.97", features = ["derive"]}
serde_json = "1.0.40"
structopt = "0.2.15"
