[package]
name = "csvbuttler"
version = "0.1.0"
authors = ["Sebastian Kriems <sebastian.kriems@obi.de>"]
edition = "2018"

[dependencies]
actix-cors = "^0.1.0"
actix-identity = "^0.1.0"
actix-rt = "^0.2.6"
actix-web = "^1.0.9"
chrono = "^0.4.9"
csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
csv = "^1.1.3"
derive_more = "^0.15.0"
env_logger = "^0.3.5"
futures = "^0.1.29"
hex = "^0.4.2"
jsonwebtoken = "^6.0.1"
listenfd = "^0.3.3"
reqwest = "^0.9.19"
serde = { version = "^1.0.104", features = ["derive"]}
serde_json = "^1.0.40"
structopt = "^0.2.15"
config = "0.10.1"
